--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.trapecio-3 {
+  width: 68.5px;
+  height: 35px;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+  border-top: 8px solid #DC0A2D;
+  transform: rotate(45deg);
+}
+
 .trapecio-2 {
   width: 73.8px;
   height: 30px;
@@ -18,6 +28,16 @@
   border-left: 0px solid transparent;
   border-top: 8px solid #89061C;
 }
+
+.triangulo{
+  width: 0;
+  height: 0;
+  border-right: 20px solid transparent;
+  border-top: 20px solid transparent;
+  border-left: 20px solid #DC0A2D;
+  border-bottom: 20px solid #DC0A2D;
+}
+
 
 /* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
